made many chages to the website to ensure quality

--- a/index.html
+++ b/index.html
@@ -1,23 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title><ef>PANAMA ISLAND RESORT</ef></title>
-    <link rel="stylesheet" href="resort.css">
+    <title>PANAMA ISLAND RESORT</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Pacifico&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poiret+One&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <h1>RESORT</h1>
-    <h2>Pages for :</h2>
-    <ol>
-        <li>Accomodation</li>
-        <li>Food</li>
-        <li>Travel Arrangements</li>
-        <li>Contact information</li>
-        <li>Pictures</li>
-    </ol>
+    <h1>INLAND RESORT</h1>
+    <p>
+        The Resorts in kenya vary all over the world.Here we
+        shall focus on Kenyan resorts and how they feature and
+        services offered
+    </p>
+    <div class="row">
+        <div class="column"><img class="projectimage2" src="https://bit.ly/33beMbN" srcalt="Resort" style="width:100%">
+        </div>
+        <div class="column"><img class="projectimage2" src="https://bit.ly/2Ob4Bjd" srcalt="Resort" style="width:100%">
+        </div>
+        <div class="column"><img class="projectimage2" src="https://bit.ly/2QMWqv9" srcalt="Resort" style="width:100%">
+        </div>
+    </div>
+    <h1>Accomadation</h1>
+    <p>
+        There are various forms of accomodation namely:
+    </p>
+    <div class="rooms">
+        <ol>
+            <li>Economy Room</li>
+            <li>Excecutive Room</li>
+            <li>Economy Double Room</li>
+            <li>Excecutive cottage</li>
+        </ol>
+        <div class="row">
+                <div class="column"><img class="projectimage2" src="https://bit.ly/33beMbN" srcalt="Resort" style="width:100%">
+                </div>
+                <div class="column"><img class="projectimage2" src="https://bit.ly/2Ob4Bjd" srcalt="Resort" style="width:100%">
+                </div>
+                <div class="column"><img class="projectimage2" src="https://bit.ly/2QMWqv9" srcalt="Resort" style="width:100%">
+                </div>
+    </div>
 
     
+    <h1>Activities</h1>
+    <p>
+        There are many activities that one can participate in the hotel.
+    </p>
+    <div class="activities">
+        <ol>
+            <li>Swimming</li>
+            <li>Dining</li>
+            <li>Naturewalks</li>
+            <li>Spa and recreation</li>
+        </ol>
+        <div class="row">
+                <div class="column"><img class="projectimage2" src="https://bit.ly/33beMbN" srcalt="Resort" style="width:100%">
+                </div>
+                <div class="column"><img class="projectimage2" src="https://bit.ly/2Ob4Bjd" srcalt="Resort" style="width:100%">
+                </div>
+                <div class="column"><img class="projectimage2" src="https://bit.ly/2QMWqv9" srcalt="Resort" style="width:100%">
+                </div>
+    </div>
+
+
+    <div>
+        <footer class="footer">
+            <p>@TIMOTHY MAINA</p>
+            <P>CONTACTS : +254713131056</P>
+            <P><em>&copy; 2019 All Rights Reserved</em></P>
+        </footer>
+    </div>
 </body>
+
 </html>
