added images in a list

--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
             <li>Excecutive cottage</li>
         </ol>
         <div class="row">
-                <div class="column"><img class="projectimage2" src="https://bit.ly/33beMbN" srcalt="Resort" style="width:100%">
+                <div class="column"><img class="projectimage2" src="https://bit.ly/37FDmVQ" srcalt="Resort" style="width:100%">
                 </div>
-                <div class="column"><img class="projectimage2" src="https://bit.ly/2Ob4Bjd" srcalt="Resort" style="width:100%">
+                <div class="column"><img class="projectimage2" src="https://bit.ly/2OwcA9m" srcalt="Resort" style="width:100%">
                 </div>
-                <div class="column"><img class="projectimage2" src="https://bit.ly/2QMWqv9" srcalt="Resort" style="width:100%">
+                <div class="column"><img class="projectimage2" src="https://bit.ly/2QJ7Qjy" srcalt="Resort" style="width:100%">
                 </div>
     </div>
 
@@ -54,16 +54,16 @@
     <div class="activities">
         <ol>
             <li>Swimming</li>
-            <li>Dining</li>
+            <li>Restaurant</li>
             <li>Naturewalks</li>
             <li>Spa and recreation</li>
         </ol>
         <div class="row">
-                <div class="column"><img class="projectimage2" src="https://bit.ly/33beMbN" srcalt="Resort" style="width:100%">
+                <div class="column"><img class="projectimage2" src="https://cnn.it/2pJMcAJ" srcalt="Resort" style="width:100%">
                 </div>
-                <div class="column"><img class="projectimage2" src="https://bit.ly/2Ob4Bjd" srcalt="Resort" style="width:100%">
+                <div class="column"><img class="projectimage2" src="https://bit.ly/2XHpkhz" srcalt="Resort" style="width:100%">
                 </div>
-                <div class="column"><img class="projectimage2" src="https://bit.ly/2QMWqv9" srcalt="Resort" style="width:100%">
+                <div class="column"><img class="projectimage2" src="https://bit.ly/339bgih" srcalt="Resort" style="width:100%">
                 </div>
     </div>
 
